# speakup-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: release.yml
docs/: PYOXIDIZER_PLAN.md
docs/plans/: 2025-01-06-nuitka-standalone-binary-design.md  2025-11-26-claude-tts-mcp-design.md
macos/: Info.plist  speakup.entitlements
scripts/: create-app-bundle.sh  create-dmg.sh  download-voices.sh  setup.py
src/claude_tts_mcp/: __init__.py  audio_player.py  cli.py  history.py  queue_manager.py  server.py  service.py  sherpa_engine.py  streaming_player.py  tone_mapper.py  voice_manager.py
tests/: test_audio_player.py  test_server.py  test_sherpa_engine.py  test_streaming_player.py  test_tone_mapper.py  test_voice_manager.py
