[project]
name = "claude-tts-mcp"
version = "0.1.0"
description = "MCP server for text-to-speech with sherpa-onnx"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "sherpa-onnx>=1.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
]

[project.scripts]
claude-tts-mcp = "claude_tts_mcp.server:main"
speakup = "claude_tts_mcp.cli:main"
speakup-service = "claude_tts_mcp.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_tts_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
